# lcars-hass-egui

./: .gitignore  Cargo.toml  Dockerfile  index.html
.cargo/: config.toml
assets/: sw.js
src/: app.rs  lib.rs  main.rs
