[package]
name = "lcars_hass_egui"
version = "0.1.0"
authors = ["David Simon <david.mike.simon@gmail.com>"]
edition = "2021"
rust-version = "1.72"


[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
rumqttc = { version = "0.17.0", default-features = false }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
